undo unwanted changes to frontend

--- a/FrontEnd/src/app/home/home.component.html
+++ b/FrontEnd/src/app/home/home.component.html
@@ -1,14 +1,10 @@
-<div class="row">
-    <data-grid [settings]="ordersGrid" height="250"></data-grid>
-  </div>
 
-<mat-tab-group >
-  <mat-tab label="ShipInfo">
-    <data-area [settings]="shipInfoArea"></data-area>
-  </mat-tab>
-  <mat-tab label="Order Details {{getOrderTotal()}}">
-    <data-grid [settings]="orderDetailsGrid" [height]="200"></data-grid>
-  </mat-tab>
+<h1>Welcome to the Web Demo</h1>
 
-</mat-tab-group>
-<button mat-raised-button (click)="printCurrentOrder()">Print</button>
+
+  Here are some usefull links for you:
+<ul>
+  <li><a href="https://angular.io/tutorial">Angular Tutorial </a></li>
+  <li><a href="http://doc.fireflymigration.com/introduction-to-angular-and-typescript.html">Introduction to Angular and Typescript</a></li>
+  <li><a href="http://doc.fireflymigration.com/web-development-tutorial.html">Web Development Tutorial</a></li>
+</ul>
